[project]
name = "leea-voice-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "gi6rgi",email = "georgiibochorishvili@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "leea-agent-sdk @ git+https://github.com/Leea-Labs/leea-agent-sdk.git",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "elevenlabs (>=1.50.7,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
